[tool.poetry]
name = "repl-nix-datasets-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_datasets_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pd = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
